--- a/src/index.css
+++ b/src/index.css
@@ -69,11 +69,12 @@ h1, h2, p{
 }
 
 .main-container{
-  margin-top:23%;
-  width: 400px;
+  margin-top:25%;
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 0 5%;
+  max-width: 400px;
 }
 
 .chips-cont{
@@ -111,6 +112,7 @@ h1, h2, p{
 .word-to-guess-cont{
   margin-top: 1.5rem ;
   display: flex;
+  flex-wrap: wrap;
   gap: 3px;
 }
 
